--- a/src/WRA.Umbraco.Web/Views/CartPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CartPage.cshtml
@@ -56,9 +56,9 @@
                                                 Remove
                                             </a>
                                         </div>
-                                        @*<button class="align-middle font-bold text-xl border-4 border-gray-900 px-6 py-3 hover:bg-teal-400 hover:border-teal-400 hover:text-white" title="Refresh Cart">
+                                        <button class="align-middle font-bold text-xl border-4 border-gray-900 px-6 py-3 hover:bg-teal-400 hover:border-teal-400 hover:text-white" title="Refresh Cart">
                                             <i class="fa fa-refresh"></i>
-                                        </button>*@
+                                        </button>
                                     </td>
                                     <td class="fw-bold">
                                         @item.OrderLine.TotalPrice.WithoutAdjustments.Formatted()
