--- a/src/WRA.Umbraco.Web/Views/CheckoutPaymentPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutPaymentPage.cshtml
@@ -4,9 +4,10 @@
     Layout = "CheckoutStepPage.cshtml";
 
     var zeroValuePaymentMethod = Model.PaymentMethods.FirstOrDefault(x => x.Alias == "zeroValue");
+    
 }
 
-@using (Html.BeginUmbracoForm("UpdateOrderPaymentMethod", "CheckoutSurface"))
+@* @using (Html.BeginUmbracoForm("ProcessPayment", "CheckoutSurface"))
 {
     <input type="hidden" name="nextStep" value="@(Model.NextStep?.Key)" />
 
@@ -14,6 +15,12 @@
 
     if (Model.Order.TotalPrice.Value.WithTax > 0)
     {
+        // maybe move to a partial view or view component?
+        if(Model.PaymentMethod.Alias == "GlobalPayments"){
+
+            // generate the script
+
+        }
         <ul class="border border-gray-300 rounded">
             @foreach (var item in Model.PaymentMethods.Where(x => x.Alias != "zeroValue")
                .Select((pm, i) => new { PaymentMethod = pm, Index = i }))
@@ -32,7 +39,13 @@
     {
         <input type="hidden" name="paymentMethod" value="@(zeroValuePaymentMethod.Id)" />
         <div class="border border-gray-300 rounded py-4 px-4 text-center">It looks like today is your lucky day, there is nothing for you to pay 🎉</div>
-    }
+    } 
+ } *@
 
+    // maybe move to a partial view or view component?
+    @if(Model.PaymentMethod.Alias == "GlobalPayments"){
+
+        @await Html.PartialAsync("GlobalPaymentsForm")
+
+    }
     @await Html.PartialAsync("CheckoutPrevNext")
-}
