--- a/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
+++ b/src/WRA.Umbraco.Web/Views/MultimediaLanding.cshtml
@@ -59,10 +59,10 @@
                     <button id="tab-all" class="js-multimedia-filter tabs__trigger text-decoration-none border-0" value="" role="tab" aria-controls="multimediaResults" aria-selected="@((!isVideo && !isAudio) || isSearch ? "true" : "false")">All Posts</button>
                 </li>
                 <li role="presentation">
-                    <button id="tab-video" class="js-multimedia-filter tabs__trigger border-0 text-decoration-none" value="video" role="tab" aria-controls="multimediaResults" aria-selected="@(isVideo && !isSearch ? "true" : "false")">Video</button>
+                    <button id="tab-video" class="js-multimedia-filter tabs__trigger border-0 text-decoration-none" value="video" role="tab" aria-controls="multimediaResults" aria-selected="@(isVideo && !isSearch ? "true" : "false")">Video Center</button>
                 </li>
                 <li role="presentation">
-                    <button id="tab-audio" class="js-multimedia-filter tabs__trigger border-0 text-decoration-none" value="audio" role="tab" aria-controls="multimediaResults" aria-selected="@(isAudio && !isSearch ? "true" : "false")">Audio</button>
+                    <button id="tab-audio" class="js-multimedia-filter tabs__trigger border-0 text-decoration-none" value="audio" role="tab" aria-controls="multimediaResults" aria-selected="@(isAudio && !isSearch ? "true" : "false")">Audio Library</button>
                 </li>
             </ul>
         </div>
