--- a/src/WRA.Umbraco.Web/Views/CheckoutPaymentMethodPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutPaymentMethodPage.cshtml
@@ -1,17 +1,134 @@
 ﻿@using Umbraco.Commerce.Extensions;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<CheckoutPaymentMethodPage>
+
 @{
     Layout = "CheckoutStepPage.cshtml";
 
-    var zeroValuePaymentMethod = Model.PaymentMethods.FirstOrDefault(x => x.Alias == "zeroValue");
+    var ccMethod = Model.PaymentMethods.FirstOrDefault(x => x.Alias == "creditCard");
+
 }
 
-@using (Html.BeginUmbracoForm("UpdateOrderPaymentMethod", "CheckoutSurface"))
+@section aside {
+    @Html.Partial("CheckoutSidebar")
+}
+
+@using (Html.BeginUmbracoForm("UpdateOrderPaymentMethod", "CheckoutSurface", null, htmlAttributes:  new { id = "payment-form" }))
 {
     <input type="hidden" name="nextStep" value="@(Model.NextStep?.Key)" />
+    <input type="hidden" name="paymentMethod" value="@ccMethod.Id" />
+    <input name="paymentReference" id="token" />
 
-    <h3 class="text-xl font-medium mb-4 mt-8">Payment Method</h3>
+    
 
+    @* checkout summary *@
+    <div class="mb-5 px-3 py-1 border rounded">
+        <div class="d-flex flex-column flex-sm-row py-2">
+            <span style="width: 80px; color: #696f78;">Contact</span>
+            <span class="flex-grow-1">johnsmith@gmail.com</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+        <div class="d-flex flex-column flex-sm-row py-2 border-top">
+            <span style="width: 80px; color: #696f78;">Ship to</span>
+            <span class="flex-grow-1">1234 Maple Dr, Town Name, WI, 56789, United States</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+        <div class="d-flex flex-column flex-sm-row py-2 border-top">
+            <span style="width: 80px; color: #696f78;">Shipping method</span>
+            <span class="flex-grow-1">Standard Shipping | Free</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+    </div>
+
+    <h2 class="h4" style="text-transform: none;">Payment</h2>
+        <partial name="Commerce/GlobalPaymentsForm"/>
+    @* <div class="mb-5">
+        <div class="row g-2">
+            <div class="col-12">
+                <label for="payment-card-name" class="visually-hidden">Name on card</label>
+                <input id="payment-card-name" class="form-control" type="text" required placeholder="Name on card" />
+            </div>
+            <div class="col-12 col-md-6">
+                <label for="payment-card-expiration" class="visually-hidden">Expiration date</label>
+                <input id="payment-card-expiration" class="form-control" type="text" required placeholder="Expiration date (MM / YY)" />
+            </div>
+            <div class="col-12 col-md-6">
+                <label for="payment-card-code" class="visually-hidden">Security code</label>
+                <input id="payment-card-code" class="form-control" type="text" required placeholder="Security code" />
+            </div>
+        </div>
+    </div> *@
+
+    <h2 class="h4" style="text-transform: none;">Billing Address</h2>
+    <ul class="list-unstyled mb-0">
+        <li class="mb-2 border rounded">
+            <label class="d-block px-3 py-2">
+                <input class="form-check-input" type="radio" name="billingAddress" value="same" checked required />
+                <span class="form-check-label ms-2">Use as shipping address</span>
+            </label>
+        </li>
+        <li class="mb-2 border rounded">
+            <label class="d-block px-3 py-2">
+                <input class="form-check-input" type="radio" name="billingAddress" value="different" required />
+                <span class="form-check-label ms-2">Use a different billing address</span>
+            </label>
+
+            @* <div class="mb-3 px-3">
+                <div class="row g-2">
+                    <div class="col-12 col-md-6">
+                        <label for="billing-address-fname" class="visually-hidden">First name</label>
+                        <input id="billing-address-fname" class="form-control" type="text" name="billingAddress.Firstname" value="@(Model.Order.CustomerInfo.FirstName)" placeholder="First name" />
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <label for="billing-address-lname" class="visually-hidden">Last name</label>
+                        <input id="billing-address-lname" class="form-control" type="text" name="billingAddress.Lastname" value="@(Model.Order.CustomerInfo.LastName)" placeholder="Last name" />
+                    </div>
+                    <div class="col-12">
+                        <label for="billing-address-company" class="visually-hidden">Company</label>
+                        <input id="billing-address-company" class="form-control" type="text" placeholder="Company (optional)" />
+                    </div>
+                    <div class="col-12">
+                        <label for="billing-address-address-1" class="visually-hidden">Address Line 1</label>
+                        <input id="billing-address-address-1" class="form-control" type="text" name="billingAddress.Line1" value="@(Model.Order.Properties["billingAddressLine1"])" placeholder="Address Line 1" />
+                    </div>
+                    <div class="col-12">
+                        <label for="billing-address-address-line-2" class="visually-hidden">Address Line 2</label>
+                        <input id="billing-address-address-line-2" class="form-control" type="text" name="billingAddress.Line2" value="@(Model.Order.Properties["billingAddressLine2"])" placeholder="Address Line 2" />
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <label for="billing-address-city" class="visually-hidden">City</label>
+                        <input id="billing-address-city" class="form-control" type="text" name="billingAddress.City" value="@(Model.Order.Properties["billingCity"])" placeholder="City" />
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <label for="billing-address-state" class="visually-hidden">State</label>
+                        <select id="billing-address-state" class="form-select">
+                            <option value="">State</option>
+                            <option value="WI">Wisconsin</option> @* temp *@
+                        @*</select>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <label for="billing-address-zip" class="visually-hidden">Zipcode</label>
+                        <input id="billing-address-zip" class="form-control" type="text" name="billingAddress.ZipCode" value="@(Model.Order.Properties["shippingZipCode"])" placeholder="Zipcode" />
+                    </div>
+                    <div class="col-12">
+                        <label for="billing-address-county" class="visually-hidden">County (WI only)</label>
+                        <input id="billing-address-county" class="form-control" type="text" name="billingAddress.County" value="@(Model.Order.Properties["shippingCounty"])" placeholder="County (WI only)" />
+                    </div>
+                    <div class="col-12">
+                        <label for="customer-information-country" class="visually-hidden">Country</label>
+                        <select id="customer-information-country" class="form-select" name="billingAddress.Country">
+                            <option value="">Country</option>
+                            @*foreach (var country in Model.Countries)
+                            {
+                                <!option value="@country.Id" @Html.Raw(Model.Order.PaymentInfo.CountryId == country.Id ? "selected=\"selected\"" : "")>@country.Name</!option>
+                            }*@
+                        @*</select>
+                    </div>
+                </div>
+            </div> *@
+        </li>
+    </ul>
+
+    @* <h3 class="text-xl font-medium mb-4 mt-8">Payment Method</h3>
     if (Model.Order.TotalPrice.Value.WithTax > 0)
     {
         <ul class="border border-gray-300 rounded">
@@ -32,7 +149,8 @@
     {
         <input type="hidden" name="paymentMethod" value="@(zeroValuePaymentMethod.Id)" />
         <div class="border border-gray-300 rounded py-4 px-4 text-center">It looks like today is your lucky day, there is nothing for you to pay 🎉</div>
-    }
+    } *@
 
     @await Html.PartialAsync("CheckoutPrevNext")
 }
+
