--- a/src/WRA.Umbraco.Web/Views/CheckoutShippingMethodPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutShippingMethodPage.cshtml
@@ -1,14 +1,46 @@
 ﻿@using Umbraco.Commerce.Extensions;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<CheckoutShippingMethodPage>
+
 @{
     Layout = "CheckoutStepPage.cshtml";
+}
+
+@section aside {
+    @Html.Partial("CheckoutSidebar")
 }
 
 @using (Html.BeginUmbracoForm("UpdateOrderShippingMethod", "CheckoutSurface"))
 {
     <input type="hidden" name="nextStep" value="@(Model.NextStep?.Key)" />
 
-    <h3 class="text-xl font-medium mb-4">Shipping Method</h3>
+    @* checkout summary *@
+    <div class="mb-5 px-3 py-1 border rounded">
+        <div class="d-flex flex-column flex-sm-row py-2">
+            <span style="width: 80px; color: #696f78;">Contact</span>
+            <span class="flex-grow-1">johnsmith@gmail.com</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+        <div class="d-flex flex-column flex-sm-row py-2 border-top">
+            <span style="width: 80px; color: #696f78;">Ship to</span>
+            <span class="flex-grow-1">1234 Maple Dr, Town Name, WI, 56789, United States</span>
+            <a class="text-decoration-none" href="#">Change</a>
+        </div>
+    </div>
+
+    <h2 class="h4" style="text-transform: none;">Shipping Method</h2>
+    <ul class="list-unstyled mb-0">
+        @foreach (var item in Model.ShippingMethods.Select((sm, i) => new { ShippingMethod = sm, Index = i }))
+        {
+            <li class="mb-2 border rounded">
+                <label class="d-block px-3 py-2">
+                    <input class="form-check-input" type="radio" name="shippingMethod" value="@item.ShippingMethod.Id" @Html.Raw((Model.Order.ShippingInfo.ShippingMethodId.HasValue && Model.Order.ShippingInfo.ShippingMethodId.Value == item.ShippingMethod.Id) || (!Model.Order.ShippingInfo.ShippingMethodId.HasValue && Model.ShippingCountry != null && Model.ShippingCountry.DefaultShippingMethodId == item.ShippingMethod.Id) ? "checked=\"checked\"" : "") required />
+                    <span class="form-check-label ms-2">@(item.ShippingMethod.Name)</span>
+                </label>
+            </li>
+        }
+    </ul>
+
+    @*<h3 class="text-xl font-medium mb-4">Shipping Method</h3>
     <ul class="border border-gray-300 rounded">
         @foreach (var item in Model.ShippingMethods.Select((sm, i) => new { ShippingMethod = sm, Index = i }))
         {
@@ -20,7 +52,7 @@
                 </label>
             </li>
         }
-    </ul>
+    </ul>*@
 
     @await Html.PartialAsync("CheckoutPrevNext")
 }
