--- a/src/WRA.Umbraco.Web/Views/CheckoutStepPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutStepPage.cshtml
@@ -13,11 +13,11 @@
     @RenderSection("head", false)
 }
 
-@section scripts {
+@*section scripts {
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
     <script src="checkout.js"></script>
     @RenderSection("scripts", false)
-}
+}*@
 
 <div class="checkout-wrapper">
     <div class="container py-5 py-lg-9">
