--- a/src/WRA.Umbraco.Web/Views/CheckoutShippingMethodPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutShippingMethodPage.cshtml
@@ -3,6 +3,12 @@
 
 @{
     Layout = "CheckoutStepPage.cshtml";
+    var addressLine1 = Model.Order.Properties["shippingLine1"] ?? string.Empty;
+    var city = Model.Order.Properties["shippingCity"] ?? string.Empty;
+    var state = Model.Order.Properties["ShippingState"] ?? string.Empty;
+    var zip = Model.Order.Properties["shippingZip"] ?? string.Empty;
+    var country = Model.Order.Properties["shippingCountry"] ?? string.Empty;
+    var formattedAddress = $"{addressLine1}, {city}, {state}, {zip}, {country}";
 }
 
 @section aside {
@@ -13,19 +19,22 @@
 {
     <input type="hidden" name="nextStep" value="@(Model.NextStep?.Key)" />
 
-    @* checkout summary *@
-    <div class="mb-5 px-3 py-1 border rounded">
-        <div class="d-flex flex-column flex-sm-row py-2">
-            <span style="width: 80px; color: #696f78;">Contact</span>
-            <span class="flex-grow-1">johnsmith@gmail.com</span>
-            <a class="text-decoration-none" href="#">Change</a>
+    @if(!string.IsNullOrEmpty(addressLine1))
+    {
+        @* checkout summary *@
+        <div class="mb-5 px-3 py-1 border rounded">
+            <div class="d-flex flex-column flex-sm-row py-2">
+                <span style="width: 80px; color: #696f78;">Contact</span>
+                <span class="flex-grow-1">@Model.Order.CustomerInfo.Email</span>
+                @* <a class="text-decoration-none" href="#">Change</a> *@
+            </div>
+            <div class="d-flex flex-column flex-sm-row py-2 border-top">
+                <span style="width: 80px; color: #696f78;">Ship to</span>
+                <span class="flex-grow-1">@formattedAddress</span>
+                <a class="text-decoration-none" href="#">Change</a>
+            </div>
         </div>
-        <div class="d-flex flex-column flex-sm-row py-2 border-top">
-            <span style="width: 80px; color: #696f78;">Ship to</span>
-            <span class="flex-grow-1">1234 Maple Dr, Town Name, WI, 56789, United States</span>
-            <a class="text-decoration-none" href="#">Change</a>
-        </div>
-    </div>
+    }
 
     <h2 class="h4" style="text-transform: none;">Shipping Method</h2>
     <ul class="list-unstyled mb-0">
