--- a/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/global.scss
@@ -22,6 +22,7 @@
 @import 'components/site-header';
 @import 'components/spacer';
 @import 'components/tabs';
+@import 'components/dialogs';
 @import 'components/page-header';
 @import 'components/hot-tip';
 @import 'components/mission-statement';
