--- a/src/WRA.Umbraco.Web/wwwroot/css/src/components/_button.scss
+++ b/src/WRA.Umbraco.Web/wwwroot/css/src/components/_button.scss
@@ -12,6 +12,16 @@
     text-align: center;
     z-index: 0;
 
+    &[disabled] {
+        color: $gray-30 !important;
+        cursor: not-allowed;
+
+        &:before {
+            border-color: $gray-20 !important;
+            background-color: $gray-20 !important;
+        }
+    }
+
     &:where(:not(.btn-link-arrow):not(.btn-link)) {
         color: #FFFFFF;
         padding: $btn-padding-y $btn-padding-x;
