Deployment cd86a67e-b2dd-4939-865d-394dbb733d55: Run number 405

--- a/src/WRA.Umbraco.Web/Views/CartPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CartPage.cshtml
@@ -77,9 +77,12 @@
                             }
                         </tbody>
                     </table>
-                    <button type="submit" title="Refresh Cart">
-                        <i class="fa fa-refresh"></i>
-                    </button>
+                    <div class="text-end">
+                        <button class="btn btn-light btn-sm" type="submit" title="Refresh Cart">
+                            Refresh Cart
+                            <i class="fa fa-refresh"></i>
+                        </button>
+                    </div>
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="mt-5 p-4" style="border: 1px solid #d7d7dc; border-radius: 0.25rem;">
