--- a/src/WRA.Umbraco.Web/Views/CheckoutInformationPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutInformationPage.cshtml
@@ -49,16 +49,72 @@
         </div>
         <div class="col-12 col-md-4">
             <label for="customer-information-state" class="visually-hidden">State</label>
-            <select name="shippingAddress.State" id="customer-information-state" class="form-select" required>
+            <select name="shippingAddress.State" id="customer-information-state" class="form-select js-checkout-state" required>
                 <option value="">State</option>
-                <option value="WI">Wisconsin</option> @* temp *@
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+                <option value="DC">District of Columbia</option>
+                @* <option value="AS">American Samoa</option>
+                <option value="GU">Guam</option>
+                <option value="MP">Northern Mariana Islands</option>
+                <option value="PR">Puerto Rico</option>
+                <option value="UM">United States Minor Outlying Islands</option>
+                <option value="VI">Virgin Islands, U.S.</option> *@
             </select>
         </div>
         <div class="col-12 col-md-4">
             <label for="customer-information-zip" class="visually-hidden">Zipcode</label>
             <input id="customer-information-zip" class="form-control" type="text" required name="shippingAddress.ZipCode" value="@(Model.Order.Properties["shippingZipCode"])" placeholder="Zipcode" />
         </div>
-        <div class="col-12">
+        <div class="col-12 d-none js-checkout-county">
             <label for="customer-information-address-county" class="visually-hidden">County (WI only)</label>
             <input id="customer-information-address-county" class="form-control" type="text" name="shippingAddress.County" value="@(Model.Order.Properties["shippingCounty"])" placeholder="County (WI only)" />
         </div>
