--- a/src/WRA.Umbraco.Web/Views/CheckoutPaymentMethodPage.cshtml
+++ b/src/WRA.Umbraco.Web/Views/CheckoutPaymentMethodPage.cshtml
@@ -18,8 +18,6 @@
     <input type="hidden" name="paymentMethod" value="@ccMethod.Id" />
     <input name="paymentReference" id="token" />
 
-    
-
     @* checkout summary *@
     <div class="mb-5 px-3 py-1 border rounded">
         <div class="d-flex flex-column flex-sm-row py-2">
@@ -40,9 +38,9 @@
     </div>
 
     <h2 class="h4" style="text-transform: none;">Payment</h2>
-        <partial name="Commerce/GlobalPaymentsForm"/>
-    @* <div class="mb-5">
-        <div class="row g-2">
+    <div class="d-flex flex-wrap mx-n1 mb-5">
+        <partial name="Commerce/GlobalPaymentsForm" />
+        @* <div class="row g-2">
             <div class="col-12">
                 <label for="payment-card-name" class="visually-hidden">Name on card</label>
                 <input id="payment-card-name" class="form-control" type="text" required placeholder="Name on card" />
@@ -55,8 +53,8 @@
                 <label for="payment-card-code" class="visually-hidden">Security code</label>
                 <input id="payment-card-code" class="form-control" type="text" required placeholder="Security code" />
             </div>
-        </div>
-    </div> *@
+        </div> *@
+    </div>
 
     <h2 class="h4" style="text-transform: none;">Billing Address</h2>
     <ul class="list-unstyled mb-0">
@@ -68,11 +66,11 @@
         </li>
         <li class="mb-2 border rounded">
             <label class="d-block px-3 py-2">
-                <input class="form-check-input" type="radio" name="billingAddress" value="different" required />
+                <input class="form-check-input js-alt-billing-address" type="radio" name="billingAddress" value="different" required />
                 <span class="form-check-label ms-2">Use a different billing address</span>
             </label>
 
-            @* <div class="mb-3 px-3">
+            <div class="d-none mb-3 px-3 js-alt-billing-address-fields">
                 <div class="row g-2">
                     <div class="col-12 col-md-6">
                         <label for="billing-address-fname" class="visually-hidden">First name</label>
@@ -100,16 +98,66 @@
                     </div>
                     <div class="col-12 col-md-4">
                         <label for="billing-address-state" class="visually-hidden">State</label>
-                        <select id="billing-address-state" class="form-select">
+                        <select id="billing-address-state" class="form-select js-checkout-state">
                             <option value="">State</option>
-                            <option value="WI">Wisconsin</option> @* temp *@
-                        @*</select>
+                            <option value="AL">Alabama</option>
+                            <option value="AK">Alaska</option>
+                            <option value="AZ">Arizona</option>
+                            <option value="AR">Arkansas</option>
+                            <option value="CA">California</option>
+                            <option value="CO">Colorado</option>
+                            <option value="CT">Connecticut</option>
+                            <option value="DE">Delaware</option>
+                            <option value="FL">Florida</option>
+                            <option value="GA">Georgia</option>
+                            <option value="HI">Hawaii</option>
+                            <option value="ID">Idaho</option>
+                            <option value="IL">Illinois</option>
+                            <option value="IN">Indiana</option>
+                            <option value="IA">Iowa</option>
+                            <option value="KS">Kansas</option>
+                            <option value="KY">Kentucky</option>
+                            <option value="LA">Louisiana</option>
+                            <option value="ME">Maine</option>
+                            <option value="MD">Maryland</option>
+                            <option value="MA">Massachusetts</option>
+                            <option value="MI">Michigan</option>
+                            <option value="MN">Minnesota</option>
+                            <option value="MS">Mississippi</option>
+                            <option value="MO">Missouri</option>
+                            <option value="MT">Montana</option>
+                            <option value="NE">Nebraska</option>
+                            <option value="NV">Nevada</option>
+                            <option value="NH">New Hampshire</option>
+                            <option value="NJ">New Jersey</option>
+                            <option value="NM">New Mexico</option>
+                            <option value="NY">New York</option>
+                            <option value="NC">North Carolina</option>
+                            <option value="ND">North Dakota</option>
+                            <option value="OH">Ohio</option>
+                            <option value="OK">Oklahoma</option>
+                            <option value="OR">Oregon</option>
+                            <option value="PA">Pennsylvania</option>
+                            <option value="RI">Rhode Island</option>
+                            <option value="SC">South Carolina</option>
+                            <option value="SD">South Dakota</option>
+                            <option value="TN">Tennessee</option>
+                            <option value="TX">Texas</option>
+                            <option value="UT">Utah</option>
+                            <option value="VT">Vermont</option>
+                            <option value="VA">Virginia</option>
+                            <option value="WA">Washington</option>
+                            <option value="WV">West Virginia</option>
+                            <option value="WI">Wisconsin</option>
+                            <option value="WY">Wyoming</option>
+                            <option value="DC">District of Columbia</option>
+                        </select>
                     </div>
                     <div class="col-12 col-md-4">
                         <label for="billing-address-zip" class="visually-hidden">Zipcode</label>
                         <input id="billing-address-zip" class="form-control" type="text" name="billingAddress.ZipCode" value="@(Model.Order.Properties["shippingZipCode"])" placeholder="Zipcode" />
                     </div>
-                    <div class="col-12">
+                    <div class="col-12 d-none js-checkout-county">
                         <label for="billing-address-county" class="visually-hidden">County (WI only)</label>
                         <input id="billing-address-county" class="form-control" type="text" name="billingAddress.County" value="@(Model.Order.Properties["shippingCounty"])" placeholder="County (WI only)" />
                     </div>
@@ -121,10 +169,10 @@
                             {
                                 <!option value="@country.Id" @Html.Raw(Model.Order.PaymentInfo.CountryId == country.Id ? "selected=\"selected\"" : "")>@country.Name</!option>
                             }*@
-                        @*</select>
+                        </select>
                     </div>
                 </div>
-            </div> *@
+            </div>
         </li>
     </ul>
 
